--- a/testing.html
+++ b/testing.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Welcome to My First HTML Page</h1>
-    <p>This is a paragraph of text on my web page.</p>
+    <p>This is a paragraph of text on my web page updated.</p>
 </body>
 </html>
